--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "jest": "^26.5.3",
-    "release-it": "^14.1.0"
+    "release-it": "^14.1.0",
+    "webpack": "^5.91.0"
   },
   "dependencies": {
     "@babel/cli": "^7.8.4",
@@ -96,7 +97,6 @@
     "mocha": "^7.1.0",
     "moment": "^2.24.0",
     "node-notifier": "^6.0.0",
-    "node-sass": "^4.13.1",
     "offline-webpack-plugin": "0.1.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "ora": "^4.0.4",
@@ -114,8 +114,8 @@
     "redux": "^4.0.5",
     "replace-text-loader": "^0.2.1",
     "rimraf": "^3.0.2",
-    "sass": "^1.3.0",
-    "sass-loader": "^8.0.2",
+    "sass": "^1.72.0",
+    "sass-loader": "^14.1.1",
     "speed-measure-webpack-plugin": "^1.3.3",
     "sprites-loader": "^0.8.2",
     "string-replace-webpack-plugin": "^0.1.3",
@@ -129,7 +129,6 @@
     "vue-loader": "^15.9.0",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11",
-    "webpack": "^5.91.0",
     "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-middleware": "^3.7.2",
